--- a/Files/overlay.html
+++ b/Files/overlay.html
@@ -11,6 +11,7 @@
     <link href="css/global.css" rel="stylesheet">
     <link href="css/overlay.css" rel="stylesheet">
     <!-- JavaScript -->
+    <script src="lib/strophejingle.bundle.js"></script>
     <script data-main="app" src="lib/require.js"></script>
 </head>
 <body>
@@ -24,8 +25,5 @@
             <div id="info" style="display:none;"></div>
         </div>
     </div>
-    <object id="ts3" type="application/x-overwolfteamspeakplugin">
-        <param name="onload" value="ts3Loaded" />
-    </object>
 </body>
 </html>
