--- a/Files/overlay.html
+++ b/Files/overlay.html
@@ -25,7 +25,9 @@
     <div id="overlay">
         <div id="username">
             <span class="value"></span>
-            <div id="settings"><i class="material-icons">settings</i></div>
+            <div id="settings" class="iconbar"><i class="material-icons">settings</i></div>
+            <div id="cameraToggle" data_value="false" class="iconbar"><i class="material-icons">videocam</i></div>
+            <div id="microphoneToggle" data_value="false" class="iconbar"><i class="material-icons">mic</i></div>
             <div id="info" style="display:none;"></div>
         </div>
     </div>
