Adding camera toggle

--- a/Files/overlay.html
+++ b/Files/overlay.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div id="videos">
-        <video class="video" style="z-index:1" id="localVideo"></video>
+        <video class="video" id="localVideo"></video>
         <div id="nocam" class="video"><i class="material-icons">face</i></div>
     </div>
     <div id="overlay">
